fixed spacing issues on main content block

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,11 @@ form{
   h3{
     font-size: 18px;
   }
+
+  .main-container{
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -195,10 +200,20 @@ form{
   h3{
     font-size: 24px;
   }
+
+  .main-container{
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 }
 
 @media only screen and (max-width: 960px) {
   #sidebar{
     margin-top: 18px;
+  }
+
+  .main-container{
+    margin-left: 20px;
+    margin-right: 20px;
   }
 }
